--- a/index.html
+++ b/index.html
@@ -42,7 +42,60 @@
 <p class="lead">Diese Webseite dient für den Sportunterricht als Präsentation und ist in Kürze erreichbar</p>
 <p class="lead">
 </p>
+</main><html><head>
+<script src="js/jquery-3.3.1.js"></script>
+<script async="" src="js/popper.min.js"></script>
+<script async="" src="js/bootstrapmin.js"></script>
+<script async="" src="js/standart.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-QGH4ZXEC3Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QGH4ZXEC3Z');
+</script>
+<script data-ad-client="ca-pub-3218919129426828" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" data-checked-head="true"></script>
+<link media="all" rel="stylesheet" href="css/bootstrapmin.css">
+<link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
+<link href="css/standart.css" rel="stylesheet">
+</head>
+<body class="text-center">
+<video loading="lazy" autoplay="" muted="" loop="" style="    object-fit: cover;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    z-index: -1;
+    top: 0;
+    height: 100%;">
+<source src="assets/background.mp4" type="video/mp4">
+</video>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" style="
+    background: #ffffffa1;
+">
+<header class="masthead mb-auto">
+<div class="inner">
+<h3 class="masthead-brand">Badminton</h3>
+
+</div>
+</header>
+<main role="main" class="inner cover">
+<h1 class="cover-heading">Willkommen</h1>
+<p class="lead">Diese Webseite dient für den Sportunterricht als Präsentation und ist in Kürze erreichbar</p>
+<p class="lead">
+</p>
 </main>
+<footer class="mastfoot mt-auto">
+<div class="inner">
+<p><a target="_blank" href="https://davids-appstudio.tk/impressum.php">Impressum</a> <a target="_blank" href="https://davids-appstudio.tk/Datenschutz.php">Datenschutzerklärung</a></p>
+</div>
+</footer>
+</div>
+</body>
+</html>
+
 <footer class="mastfoot mt-auto">
 <div class="inner">
 <p><a target="_blank" href="https://davids-appstudio.tk/impressum.php">Impressum</a> <a target="_blank" href="https://davids-appstudio.tk/Datenschutz.php">Datenschutzerklärung</a></p>
