--- a/sites/main.html
+++ b/sites/main.html
@@ -28,45 +28,36 @@
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">Kopf</h5>
       </div>
-      <p class="mb-1">Hier kommt die Erklärung hin</p>
+      <p class="mb-1"> Der Kopf umrahmt die Besaitung, welche zum Schlagen des Balls gebraucht wird.</p>
     </a>
     <a href="javascript:console.log('Show')" data-order="1" class="dotlist-a list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">Besaitung</h5>
       </div>
-      <p class="mb-1">Hier kommt die Erklärung hin</p>
+      <p class="mb-1">Mit der Besaitung wird der Ball geschlagen. Die Besaitung muss aus sich kreuzenden Saiten bestehen</p>
     </a>
     <a href="javascript:console.log('Show')" data-order="2" class="dotlist-a list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">Hals</h5>
       </div>
-      <p class="mb-1">Hier kommt die Erklärung hin</p>
+      <p class="mb-1">Der Hals bildet den Übergang zwischen Kopf und Schaft</p>
     </a>
 
     <a href="javascript:console.log('Show')" data-order="3" class="dotlist-a list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">Schaft</h5>
       </div>
-      <p class="mb-1">Hier kommt die Erklärung hin</p>
+      <p class="mb-1">Als Verbindung zwischen Kopf und Griff befindet sich der Schaft.</p>
     </a>
 
     <a href="javascript:console.log('Show')" data-order="4" class="dotlist-a list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">Griff</h5>
       </div>
-      <p class="mb-1">Hier kommt die Erklärung hin</p>
+      <p class="mb-1">Der Griff befindet sich am unteren Ende des Schlägers und wird vom Spieler gehalten</p>
     </a>
   </div>
-<div class="card">
-<div class="card-header">
-Amazon Alexa Skill
-</div>
-<div class="card-body">
-<blockquote class="blockquote mb-0">
-  <p>Mit dem ScoPlanner Alexa Skill ist alles noch einfacher. Frage Alexa einfach nach deinen Hausaufgaben oder frage sie was du für morgen einpacke musst.</p>
-</blockquote>
-</div>
-</div>
+
 </div>
 
 <div class="container-p">
