--- a/sites/badmintonzuhause.html
+++ b/sites/badmintonzuhause.html
@@ -1,2 +1,59 @@
-Badminton 1
-https://www.youtube.com/watch?v=QOkYHBL0j9c
+<style>
+.progressbar li{
+  width:33%;
+}
+</style>
+<div class="container-p" id="u1">
+      <ul class="progressbar">
+          <li class="active" data-href="u1">Übungen 1</li>
+          <li data-href="u2">Übungen 2</li>
+          <li data-href="u3">Übungen 3</li>
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Video
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QOkYHBL0j9c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-p" id="u2">
+      <ul class="progressbar">
+          <li class="active" data-href="u1">Übungen 1</li>
+          <li class="active" data-href="u2">Übungen 2</li>
+          <li data-href="u3">Übungen 3</li>
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Video
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7-I_Tr_JaAs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+<div class="container-p" id="u3">
+      <ul class="progressbar">
+          <li class="active" data-href="u1">Übungen 1</li>
+          <li class="active" data-href="u2">Übungen 2</li>
+          <li class="active" data-href="u3">Übungen 3</li>
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Video
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cE2QqU1zQQs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
