--- a/sites/main.html
+++ b/sites/main.html
@@ -1,17 +1,20 @@
 
 <script async src="js/standart.js"></script>
 
+<style>
+.progressbar li{
+  width:33%;
+}
+</style>
 
-
-<div class="container-p">
+<div class="container-p"  id="teileins">
       <ul class="progressbar">
           <li class="active" data-href="teileins">Aufbau</li>
           <li data-href="griff">Griff</li>
-          <li data-href="haltung">Haltung</li>
           <li data-href="zusammenfassung">Video</li>
   </ul>
 </div>
-<div id="teileins">
+<div>
 
 
   <div class="imageexplaind">
@@ -61,41 +64,90 @@
 
 </div>
 
-<div class="container-p">
-      <ul class="progressbar">
-          <li class="active" data-href="teileins">Schlägeraufbau</li>
-          <li class="active" data-href="griff">Schlägerhaltung</li>
-          <li data-href="haltung">Haltung</li>
-          <li data-href="zusammenfassung">Video</li>
-  </ul>
+<div class="container-p" id="griff" >
+  <ul class="progressbar">
+      <li class="active" data-href="teileins">Aufbau</li>
+      <li class="active" data-href="griff">Griff</li>
+      <li data-href="zusammenfassung">Video</li>
+</ul>
 </div>
-<div id="griff">
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Laiu3Myd4J0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="card">
+  <div class="card-header">
+    Wie halte ich den Schläger?
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Der Daumen wird auf der Unterseite des Griffes platziert</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Finger sind locker</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Zwischen Hand und Griff soll eine Lücke entstehen</h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Rückhandgriff
+  </div>
+  <div class="card-body">
+    <img loading="lazy" src="https://www.mobilesport.ch/assets/lbwp-cdn/mobilesport/files/2013/09/HIlfsmittel_Badminton_Rueckhandgriff.jpg"/>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Rückhandgriff Verwendung
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Drop</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Smash</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Drive</h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Vorhandgriff
+  </div>
+  <div class="card-body">
+    <img loading="lazy" src="https://www.mobilesport.ch/assets/lbwp-cdn/mobilesport/files/2013/09/Badminton_Hilfsmittel_Vorhandgriff.jpg"/>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Vorhandgriff Verwendung
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Vorhandschlägen</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Drive</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Schnelle Bälle erzeugen</h4>
+          </div>
+    </div>
   </div>
 </div>
 
 <div class="container-p">
-      <ul class="progressbar">
-          <li class="active" data-href="teileins">Schlägeraufbau</li>
-          <li class="active" data-href="griff">Schlägerhaltung</li>
-          <li data-href="haltung">Haltung</li>
-          <li data-href="zusammenfassung">Video</li>
-  </ul>
-</div>
-<div id="haltung">
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Laiu3Myd4J0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-</div>
-
-<div class="container-p">
-      <ul class="progressbar">
-          <li class="active" data-href="teileins">Schlägeraufbau</li>
-          <li class="active" data-href="griff">Schlägerhaltung</li>
-          <li class="active" data-href="haltung">Haltung</li>
-          <li class="active" data-href="zusammenfassung">Video</li>
-  </ul>
+  <ul class="progressbar">
+      <li class="active" data-href="teileins">Aufbau</li>
+      <li class="active" data-href="griff">Griff</li>
+      <li class="active" data-href="zusammenfassung">Video</li>
+</ul>
 </div>
 <div id="zusammenfassung">
   <div class="video-container">
