--- a/sites/regeln.html
+++ b/sites/regeln.html
@@ -1,2 +1,117 @@
-Regeln in kurz
-https://www.youtube.com/watch?v=Lgc3J0tKH5w
+<style>
+.progressbar li{
+  width:33%;
+}
+</style>
+<div class="container-p" id="aufschlag">
+      <ul class="progressbar">
+          <li class="active" data-href="aufschlag">Aufschlag</li>
+          <li data-href="satz">Sätze</li>
+          <li data-href="all">Alles</li>
+
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Aufschlag
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Muss von unten gespielt werden</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Muss diagonal gespielt werden</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Bei einer geraden Punktzahl von rechts und bei ungerader von links</h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Der Aufschlag in zwei Minuten
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_oJcI0GNWAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-p" id="satz">
+      <ul class="progressbar">
+          <li class="active" data-href="aufschlag">Aufschlag</li>
+          <li class="active" data-href="satz">Sätze</li>
+          <li data-href="all">Alles</li>
+
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Sätze
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Zwei Sätze führen zum Gesamtsieg</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Ein Satz ist 21 Punkte lang</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Ab 20:20 braucht man 2 Punkte mehr</h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Ausnahmen
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4></h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Ab 29:29 braucht man nur einen Punkt</h4>
+          </div>
+          <div class="col-md-4">
+            <h4></h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Alles nochmal zusammengefasst
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DS7PU6af3xQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container-p" id="alles">
+      <ul class="progressbar">
+          <li class="active" data-href="aufschlag">Aufschlag</li>
+          <li class="active" data-href="satz">Sätze</li>
+          <li class="active" data-href="all">Alles</li>
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Video
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zC9WvCrfxHc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
