--- a/sites/technik.html
+++ b/sites/technik.html
@@ -126,6 +126,65 @@
 </div>
 
 
+<div class="container-p" id="clear">
+      <ul class="progressbar">
+          <li class="active" data-href="smash">Smash</li>
+          <li class="active" data-href="clear">Clear</li>
+          <li data-href="drop">Drop</li>
+          <li data-href="drive">Drive</li>
+          <li data-href="all">Alles</li>
+  </ul>
+</div>
+<div class="card">
+  <div class="card-header">
+    Clear
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Wohin fliegt der Shuttle?</h4>
+            <p>Vom Hinterfeld ins gegnerische Hinterfeld.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Wann wird der Schlag gebraucht?</h4>
+            <p>Wenn der Spieler den Shuttle im Hinterfeld lang spielen möchte.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>Zweck</h4>
+            <p>Vereidigungclear: wird verwendet um Zeit zu gewinnen, damit man wieder eine optimaleSpielposition einnehmen kann Angriffsclear: dient dazu, den Gegenspieler schnell in die hinteren Ecke zu „treiben“; Spieltemp erhöhen</p>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Ziel
+  </div>
+  <div class="card-body">
+    <img loading="lazy" src="https://www.mobilesport.ch/assets/lbwp-cdn/mobilesport/files/2016/03/241_Clear_vh.jpg"/>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Bewegungsausführung
+  </div>
+  <div class="card-body">
+    <img loading="lazy" src="http://www.sportunterricht.de/badminton/lernkarte_uekopfclaer1.gif"/>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Video
+  </div>
+  <div class="card-body">
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zC9WvCrfxHc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="container-p" id="drop">
       <ul class="progressbar">
           <li class="active" data-href="smash">Smash</li>
