--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <link media="all" rel="stylesheet" href="css/bootstrapmin.css">
   <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
-  <link href="css/standart.css" rel="stylesheet">
+  <link href="css/standart.css?v=1" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
