--- a/sites/badmintonzuhause.html
+++ b/sites/badmintonzuhause.html
@@ -3,6 +3,14 @@
   width:33%;
 }
 </style>
+
+<div id="auswahl">
+  <li type="button" data-href="u1" class="btn btn-primary btn-lg btn-block">Übungen 1</li>
+  <li type="button" data-href="u2" class="btn btn-primary btn-lg btn-block">Übungen 2</li>
+  <li type="button" data-href="u3" class="btn btn-primary btn-lg btn-block">Übungen 3</li>
+</div>
+<br /><br /><br />
+
 <div class="container-p" id="u1">
       <ul class="progressbar">
           <li class="active" data-href="u1">Übungen 1</li>
