--- a/sites/main.html
+++ b/sites/main.html
@@ -6,7 +6,12 @@
   width:33%;
 }
 </style>
-
+<div id="auswahl">
+  <li type="button" data-href="teileins" class="btn btn-primary btn-lg btn-block">Aufbau</li>
+  <li type="button" data-href="griff" class="btn btn-primary btn-lg btn-block">Griff</li>
+  <li type="button" data-href="zusammenfassung" class="btn btn-primary btn-lg btn-block">Video</li>
+</div>
+<br /><br /><br />
 <div class="container-p"  id="teileins">
       <ul class="progressbar">
           <li class="active" data-href="teileins">Aufbau</li>
@@ -91,6 +96,52 @@
 </div>
 <div class="card">
   <div class="card-header">
+    Vorhandgriff
+  </div>
+  <div class="card-body">
+    <img loading="lazy" src="https://www.mobilesport.ch/assets/lbwp-cdn/mobilesport/files/2013/09/Badminton_Hilfsmittel_Vorhandgriff.jpg"/>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Vorhandgriff Verwendung
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4>Smash</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Drive</h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Clear</h4>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="card">
+  <div class="card-header">
+    Der Vorhandgriff wird speziell verwendet für:
+  </div>
+  <div class="card-body">
+    <div class="row">
+          <div class="col-md-4">
+            <h4></h4>
+          </div>
+          <div class="col-md-4">
+            <h4>Schnelle Bälle</h4>
+          </div>
+          <div class="col-md-4">
+            <h4></h4>
+          </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="card">
+  <div class="card-header">
     Rückhandgriff
   </div>
   <div class="card-body">
@@ -115,32 +166,6 @@
     </div>
   </div>
 </div>
-<div class="card">
-  <div class="card-header">
-    Vorhandgriff
-  </div>
-  <div class="card-body">
-    <img loading="lazy" src="https://www.mobilesport.ch/assets/lbwp-cdn/mobilesport/files/2013/09/Badminton_Hilfsmittel_Vorhandgriff.jpg"/>
-  </div>
-</div>
-<div class="card">
-  <div class="card-header">
-    Vorhandgriff Verwendung
-  </div>
-  <div class="card-body">
-    <div class="row">
-          <div class="col-md-4">
-            <h4>Vorhandschlägen</h4>
-          </div>
-          <div class="col-md-4">
-            <h4>Drive</h4>
-          </div>
-          <div class="col-md-4">
-            <h4>Schnelle Bälle erzeugen</h4>
-          </div>
-    </div>
-  </div>
-</div>
 
 <div class="container-p">
   <ul class="progressbar">
@@ -150,7 +175,14 @@
 </ul>
 </div>
 <div id="zusammenfassung">
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Laiu3Myd4J0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="card">
+    <div class="card-header">
+      Video
+    </div>
+    <div class="card-body">
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Laiu3Myd4J0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
