--- a/sites/regeln.html
+++ b/sites/regeln.html
@@ -3,6 +3,14 @@
   width:33%;
 }
 </style>
+
+<div id="auswahl">
+  <li type="button" data-href="aufschlag" class="btn btn-primary btn-lg btn-block">Aufschlag</li>
+  <li type="button" data-href="satz" class="btn btn-primary btn-lg btn-block">Sätze</li>
+  <li type="button" data-href="all" class="btn btn-primary btn-lg btn-block">Alles</li>
+</div>
+<br /><br /><br />
+
 <div class="container-p" id="aufschlag">
       <ul class="progressbar">
           <li class="active" data-href="aufschlag">Aufschlag</li>
