--- a/sites/technik.html
+++ b/sites/technik.html
@@ -1,3 +1,13 @@
+
+<div id="auswahl">
+  <li type="button" data-href="smash" class="btn btn-primary btn-lg btn-block">Smash</li>
+  <li type="button" data-href="clear" class="btn btn-primary btn-lg btn-block">Clear</li>
+  <li type="button" data-href="drop" class="btn btn-primary btn-lg btn-block">Drop</li>
+  <li type="button" data-href="drive" class="btn btn-primary btn-lg btn-block">Drive</li>
+  <li type="button" data-href="all" class="btn btn-primary btn-lg btn-block">Alles</li>
+</div>
+<br /><br /><br />
+
 <div class="container-p" id="smash">
       <ul class="progressbar">
           <li class="active" data-href="smash">Smash</li>
