--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         <a class="nav-link" data-href="technik">Techniken</a>
         <a class="nav-link" data-href="regeln">Regeln</a>
         <a class="nav-link" data-href="badmintonzuhause">Für Zuhause</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Rechtliches
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+            <a class="dropdown-item" target="_blank" href="https://davids-appstudio.tk/Nutzungsbestimmungen.php">Nutzungsbestimmungen</a>
+            <a class="dropdown-item" target="_blank" href="https://davids-appstudio.tk/Datenschutz.php">Datenschutzerklärung</a>
+            <a class="dropdown-item" target="_blank" href="https://davids-appstudio.tk/impressum.php">Impressum</a>
+          </div>
+        </li>
       </div>
     </div>
   </nav>
