--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="js/jquery-3.3.1.js"></script>
   <script async src="js/popper.min.js"></script>
   <script async src="js/bootstrapmin.js"></script>
-  <script async src="js/standart.js"></script>
+  <script async src="js/standart.js?v=2"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
