--- a/sites/main.html
+++ b/sites/main.html
@@ -155,13 +155,13 @@
   <div class="card-body">
     <div class="row">
           <div class="col-md-4">
-            <h4>Drop</h4>
+            <h4>Rückhand Clear</h4>
           </div>
           <div class="col-md-4">
-            <h4>Smash</h4>
+            <h4></h4>
           </div>
           <div class="col-md-4">
-            <h4>Drive</h4>
+            <h4>Doppelte Verteidigung</h4>
           </div>
     </div>
   </div>
