--- a/sites/regeln.html
+++ b/sites/regeln.html
@@ -29,7 +29,7 @@
             <h4>Muss von unten gespielt werden</h4>
           </div>
           <div class="col-md-4">
-            <h4>Muss diagonal gespielt werden</h4>
+            <h4>Muss in das schräg gegenüberliegende Aufschlagfeld des Gegners gespielt werden</h4>
           </div>
           <div class="col-md-4">
             <h4>Bei einer geraden Punktzahl von rechts und bei ungerader von links</h4>
@@ -67,10 +67,10 @@
             <h4>Zwei Sätze führen zum Gesamtsieg</h4>
           </div>
           <div class="col-md-4">
-            <h4>Ein Satz ist 21 Punkte lang</h4>
+            <h4>Ein Satz geht so lang, bis ein Team 21 Punkte erreicht hat</h4>
           </div>
           <div class="col-md-4">
-            <h4>Ab 20:20 braucht man 2 Punkte mehr</h4>
+            <h4>Ab 20:20 müssen 2 Punkte Vorsprung erreicht werden, um zu gewinnen</h4>
           </div>
     </div>
   </div>
@@ -119,7 +119,7 @@
   </div>
   <div class="card-body">
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zC9WvCrfxHc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Lgc3J0tKH5w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </div>
